--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri=mongodb+srv://andressa:andressa@cluster0.dpmet.mongodb.net/book
+spring.redis.host=localhost
+spring.redis.port=6370
