--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://andressa:andressa@cluster0.dpmet.mongodb.net/book
-spring.redis.host=localhost
-spring.redis.port=6370
+spring.mongodb.embedded.version= 3.2.4
